adgfvx: try all permutation added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(CodeTheorie src/main.cpp src/ViginerePlus.cpp src/ViginerePlus.h src/Playfair.cpp src/Playfair.h src/Adfgvx.cpp src/Adfgvx.h src/Enigma.cpp src/Enigma.h src/AlgorithmDecryption.cpp src/AlgorithmDecryption.h)
+add_executable(adfgvx src/adfgvxTest.cpp src/Adfgvx.cpp src/Adfgvx.h src/AlgorithmDecryption.cpp src/AlgorithmDecryption.h)
